# EchoForge

./: .env.example  .gitignore  README.md  REFACTOR_PLAN.md  package.json  pyproject.toml
adapters/sources/feishu_minutes/: adapter.js  example-manifest.json
archive/docs/: audio-intelligence-design.md  repository-structure.md
config/: __init__.py  settings.py
docs/: audio-intelligence-design.md  repository-structure.md
pipeline/: chat-import.js  orchestrator.js  rebuild.js  source-ingest.js
pipeline/providers/: README.md  agent-native-audio-provider.js  provider-registry.js  request-builder.js  stub-audio-provider.js
pipeline/stages/: chapterize.js  ingest.js  intelligence.js  publish.js  transcribe.js  understand-audio.js
profiles/: general.json  lecture.json  work_meeting.json
prompts/profiles/: work_meeting.txt
runtime/agent/: README.md
runtime/cli/: main.js  parser.js  profile-loader.js  rebuild-commands.js  recording-store.js  run-store.js  schema-check.js  source-commands.js  state-store.js  state-validation.js
runtime/store/: artifacts.js  recordings.js  runs.js
schemas/: agent-audio-result.schema.json  chapters.schema.json  minutes.schema.json  profile.schema.json  recording.schema.json  run.schema.json  transcript.schema.json
src/echoforge/: __init__.py  __main__.py  cli.py  errors.py  models.py
src/echoforge/pipeline/: poller.py  (+3 more)
test/: source-commands.test.js
test-support/: repo-fixture.js
tests/: conftest.py  test_doubao.py  test_feishu_source.py  test_gemini_audio_test.py  test_orchestrator.py  test_renderer.py  test_tingwu.py
(+145 files in other folders)
