[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoforge"
version = "0.1.0"
description = "Python CLI for Feishu Minutes ingestion, Tingwu understanding, and Obsidian rendering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alibabacloud_tingwu20230930>=2.0.24,<3.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[project.scripts]
echoforge = "echoforge.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["echoforge*", "config*"]

[tool.setuptools.package-data]
"echoforge.renderers" = ["templates/*.md.j2"]
